refactor: fix linter issues, refs #6